// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixtures > ./fixtures/basic.vue 1`] = `
"<script setup lang="ts">
 const foo: string = 'foo',
  bar = 10
 let baz: string | undefined
 var qux = fn()
 const { a, b, c } = { a: 1, b: 2, c: 3 }

 function fn() {}
 class A {}


defineExpose({
  foo,
  bar,
  baz,
  qux,
  a,
  b,
  c,
  fn,
  A,
  foo1: foo,
})
</script>
"
`;

exports[`fixtures > ./fixtures/error/export-all.vue 1`] = `[Error: export from another module is not supported. Please import and export separately.]`;

exports[`fixtures > ./fixtures/error/export-default.vue 1`] = `[Error: export default is not supported. Please use named export.]`;

exports[`fixtures > ./fixtures/export-from-other.vue 1`] = `
"<script setup lang="ts">
import { foo as __MACROS_expose_0, type Foo, foo as __MACROS_expose_1 } from './types'
defineExpose({
  foo: __MACROS_expose_0,
  bar: __MACROS_expose_1,
})
</script>
"
`;

exports[`fixtures > ./fixtures/namespace-export.vue 1`] = `
"<script setup lang="ts">
import * as __MACROS_expose_0 from './types'
defineExpose({
  foo: __MACROS_expose_0,
})
</script>
"
`;

exports[`fixtures > ./fixtures/rename.vue 1`] = `
"<script setup lang="ts">
const foo = 1,
  bar = 1

import { foo as __MACROS_expose_0 } from './types'
import * as __MACROS_expose_1 from './types'
defineExpose({
  foo: __MACROS_expose_0,
  bar: __MACROS_expose_1,
})
</script>
"
`;
